force-app/main/default/objects/PlanificacionComercial__c/fields/Aportaciones__c.field-meta.xml
<CustomField>
    <fullName>Aportaciones__c</fullName>
    <label>Aportaciones realizadas</label>
    <summarizedField>Aportacion__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Aportacion__c.Estado__c</field>
        <operation>equals</operation>
        <value>Lista</value>
    </summaryFilterItems>
    <summaryForeignKey>Aportacion__c.PlanificacionComercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>