force-app/main/default/objects/PlanificacionComercial__c/fields/AportacionesPendientes__c.field-meta.xml
<CustomField>
    <fullName>AportacionesPendientes__c</fullName>
    <formula>AportacionesProgramadas__c - Aportaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aportaciones pendientes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>