force-app/main/default/objects/PlanificacionComercial__c/fields/AportacionesProgramadas__c.field-meta.xml
<CustomField>
    <fullName>AportacionesProgramadas__c</fullName>
    <label>Aportaciones programadas</label>
    <summarizedField>ProgramacionDeAportaciones__c.Importe__c</summarizedField>
    <summaryForeignKey>ProgramacionDeAportaciones__c.PlanificacionComercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>