force-app/main/default/objects/PlanificacionComercial__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planificaciones Comerciales</relationshipLabel>
    <relationshipName>Planificaciones_Comerciales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>