force-app/main/default/objects/PlanificacionComercial__c/fields/CumplimentoObjetivoDeAportaciones__c.field-meta.xml
<CustomField>
    <fullName>CumplimentoObjetivoDeAportaciones__c</fullName>
    <formula>Aportaciones__c /  ObjetivoDeAportaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Cumplimento objetivo de aportaciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>