force-app/main/default/objects/PlanificacionComercial__c/fields/CumplimentoObjetivoVentasBrutas__c.field-meta.xml
<CustomField>
    <fullName>CumplimentoObjetivoVentasBrutas__c</fullName>
    <formula>IF(ObjetivoDeVentas__c != 0,
   Ventas__c / ObjetivoDeVentas__c,
   0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Cumplimento objetivo ventas brutas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>