force-app/main/default/objects/PlanificacionComercial__c/fields/Cumplimiento_importe_margen_bruto__c.field-meta.xml
<CustomField>
    <fullName>Cumplimiento_importe_margen_bruto__c</fullName>
    <formula>IF(
     Objetivo_importe_margen_bruto__c = 0,
    0,
     Importe_margen_bruto__c /  Objetivo_importe_margen_bruto__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumplimiento importe margen bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>