force-app/main/default/objects/PlanificacionComercial__c/fields/Cumplimiento_margen__c.field-meta.xml
<CustomField>
    <fullName>Cumplimiento_margen__c</fullName>
    <formula>IF ( Porcentaje_Importe_Margen_Neto__c = 0 || Objetivo_de_Margen__c = 0 ,
0 ,
Porcentaje_Importe_Margen_Neto__c / Objetivo_de_Margen__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Cumplimiento margen neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>