force-app/main/default/objects/PlanificacionComercial__c/fields/EstadoDeProgramacionDeAportaciones__c.field-meta.xml
<CustomField>
    <fullName>EstadoDeProgramacionDeAportaciones__c</fullName>
    <formula>IF ( ObjetivoDeAportaciones__c - AportacionesProgramadas__c = 0 ,
&quot;Listo&quot; ,
IF ( ObjetivoDeAportaciones__c - AportacionesProgramadas__c &lt; 0 ,
&quot;Sobre objetivo&quot; ,
&quot;Pendiente&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado de programación de aportaciones</label>
    <type>Text</type>
</CustomField>