force-app/main/default/objects/PlanificacionComercial__c/fields/EstadoDeProgramacionDeVentas__c.field-meta.xml
<CustomField>
    <fullName>EstadoDeProgramacionDeVentas__c</fullName>
    <formula>IF ( ObjetivoDeVentas__c - VentasProgramadas__c = 0 ,
&quot;Listo&quot; ,
IF ( ObjetivoDeVentas__c - VentasProgramadas__c &lt; 0 ,
&quot;Sobre objetivo&quot; ,
&quot;Pendiente&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado de programación de ventas</label>
    <type>Text</type>
</CustomField>