force-app/main/default/objects/PlanificacionComercial__c/fields/Fin__c.field-meta.xml
<CustomField>
    <fullName>Fin__c</fullName>
    <label>Fin</label>
    <type>Date</type>
</CustomField>