force-app/main/default/objects/PlanificacionComercial__c/fields/Importe_margen_bruto__c.field-meta.xml
<CustomField>
    <fullName>Importe_margen_bruto__c</fullName>
    <formula>ImporteVentasNetas__c * Porcentaje_Importe_Margen_Neto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe margen bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>