force-app/main/default/objects/PlanificacionComercial__c/fields/Importe_margen_neto__c.field-meta.xml
<CustomField>
    <fullName>Importe_margen_neto__c</fullName>
    <label>Importe margen neto</label>
    <summarizedField>Venta__c.ImporteMargenNeto__c</summarizedField>
    <summaryForeignKey>Venta__c.PlanificacionComercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>