force-app/main/default/objects/PlanificacionComercial__c/fields/ImporteVentasNetas__c.field-meta.xml
<CustomField>
    <fullName>ImporteVentasNetas__c</fullName>
    <label>Importe ventas netas</label>
    <summarizedField>Venta__c.Imp_Neto_Previsto__c</summarizedField>
    <summaryForeignKey>Venta__c.PlanificacionComercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>