force-app/main/default/objects/PlanificacionComercial__c/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <label>Notas</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>