force-app/main/default/objects/PlanificacionComercial__c/fields/Objetivo_de_Margen__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_de_Margen__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Margen proyectado en base al presupuesto</description>
    <inlineHelpText>Projected margin based on the budget</inlineHelpText>
    <label>% Objetivo margen neto</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>