force-app/main/default/objects/PlanificacionComercial__c/fields/Objetivo_de_Ventas_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_de_Ventas_Bruto__c</fullName>
    <formula>ObjetivoDeVentas__c / (1 - PorcentajeAportaciones__c - PorcentajeConvenio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo ventas brutas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>