force-app/main/default/objects/PlanificacionComercial__c/fields/Objetivo_importe_margen_bruto__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_importe_margen_bruto__c</fullName>
    <formula>ObjetivoDeVentas__c * Objetivo_de_Margen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo importe margen bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>