force-app/main/default/objects/PlanificacionComercial__c/fields/ObjetivoBeneficioNeto__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoBeneficioNeto__c</fullName>
    <formula>ObjetivoDeVentasNeto__c * Objetivo_de_Margen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo Beneficio Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>