force-app/main/default/objects/PlanificacionComercial__c/fields/ObjetivoDeAportaciones__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoDeAportaciones__c</fullName>
    <formula>PorcentajeAportaciones__c  *  Objetivo_de_Ventas_Bruto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo de aportaciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>