force-app/main/default/objects/PlanificacionComercial__c/fields/ObjetivoDeVentas__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoDeVentas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Objetivo ventas netas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>