force-app/main/default/objects/PlanificacionComercial__c/fields/ObjetivoDeVentasNeto__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoDeVentasNeto__c</fullName>
    <formula>Objetivo_de_Ventas_Bruto__c * (1 -  (PorcentajeAportaciones__c +  PorcentajeConvenio__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo de Ventas Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>