force-app/main/default/objects/PlanificacionComercial__c/fields/Porcentaje_Importe_Margen_Neto__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Importe_Margen_Neto__c</fullName>
    <formula>IF ( Importe_margen_neto__c = 0 || ImporteVentasNetas__c = 0 ,
0 ,
Importe_margen_neto__c / ImporteVentasNetas__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% margen neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>