force-app/main/default/objects/PlanificacionComercial__c/fields/PorcentajeConvenio__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeConvenio__c</fullName>
    <label>% Convenio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>