force-app/main/default/objects/PlanificacionComercial__c/fields/PorcentajeCumplimientoVentasNetas__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeCumplimientoVentasNetas__c</fullName>
    <formula>ImporteVentasNetas__c / ObjetivoDeVentasNeto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Cumplimento objetivo ventas netas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>