force-app/main/default/objects/PlanificacionComercial__c/fields/Ventas__c.field-meta.xml
<CustomField>
    <fullName>Ventas__c</fullName>
    <label>Importe ventas brutas</label>
    <summarizedField>Venta__c.Importe__c</summarizedField>
    <summaryForeignKey>Venta__c.PlanificacionComercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>