force-app/main/default/objects/PlanificacionComercial__c/fields/VentasProgramadas__c.field-meta.xml
<CustomField>
    <fullName>VentasProgramadas__c</fullName>
    <label>Ventas programadas</label>
    <summarizedField>ProgramacionDeVentas__c.Importe__c</summarizedField>
    <summaryForeignKey>ProgramacionDeVentas__c.PlanificacionComercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>